force-app/main/default/objects/StoryInsightCache__c/StoryInsightCache__c.object-meta.xml
<CustomObject>
    <label>StoryInsightCache</label>
    <nameField>
        <label>StoryCache Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>StoryInsightCaches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>