force-app/main/default/objects/StoryInsightCache__c/fields/InsightIndex__c.field-meta.xml
<CustomField>
    <fullName>InsightIndex__c</fullName>
    <label>InsightIndex</label>
    <length>255</length>
    <type>Text</type>
</CustomField>