force-app/main/default/objects/StoryInsightCache__c/fields/StoryId__c.field-meta.xml
<CustomField>
    <fullName>StoryId__c</fullName>
    <label>StoryId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>